--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@ function onMapClick(e) {
 }
 
 map.on('click', onMapClick);
+     
+     fetch('map.geojson')
+ .then(response => response.json())
+ .then(data => {
+   L.geoJSON(data).addTo(map);
+ });
     </script>
 
 </body>
